# tele-rs

./: .justfile  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml
crates/tele/: Cargo.toml  README.md
crates/tele-codegen/: Cargo.toml
crates/tele-codegen/spec/: bot_api.json
crates/tele-codegen/src/: advanced.rs  main.rs  spec.rs  sync_spec.rs
crates/tele-macros/: Cargo.toml  README.md
crates/tele-macros/src/: lib.rs
crates/tele-macros/tests/: derive.rs
crates/tele-macros/tests/ui/fail/: borrowed_field.rs  borrowed_field.stderr  duplicate_command_name.rs  duplicate_command_name.stderr  invalid_command_name.rs  invalid_command_name.stderr  not_enum.rs  not_enum.stderr
crates/tele-macros/tests/ui/pass/: basic.rs
crates/tele/benches/: baseline.rs
crates/tele/docs/: kind-routing.md  migration-0.1.8.md  runtime-integration.md
crates/tele/examples/: api_layers.rs  async_send_message.rs  bot_axum_webhook.rs  bot_engine_long_polling.rs  bot_fallible_session.rs  bot_long_polling.rs  bot_mini_app.rs  bot_quickstart.rs  bot_typed_commands.rs
crates/tele/src/: auth.rs  error.rs  lib.rs  prelude.rs  testing.rs  util.rs
crates/tele/src/api/: advanced.rs  advanced_methods.inc.rs  bot.rs  chats.rs  files.rs  messages.rs  mod.rs  payments.rs  stickers.rs  updates.rs
crates/tele/src/bot/: app.rs  axum.rs  context.rs  context_app.rs  control.rs  handler_error.rs  mod.rs  outbox.rs  request_state.rs  routing.rs  runtime.rs  session.rs  testing.rs
crates/tele/src/bot/app/: engine.rs  webhook.rs
crates/tele/src/bot/routing/: extractors.rs  router.rs
crates/tele/src/bot/routing/router/: builders.rs
crates/tele/src/client/: async_client.rs  blocking_client.rs  config.rs  layers.rs  mod.rs  observability.rs
crates/tele/src/client/layers/: app.rs  bootstrap.rs  control.rs  ergo.rs  membership.rs  menu.rs  moderation.rs  raw.rs  setup.rs  startup.rs  support.rs  typed.rs  web_app.rs
crates/tele/src/client/layers/ergo/: async_api.rs  blocking_api.rs
crates/tele/src/transport/: async_transport.rs  blocking_transport.rs  mod.rs
crates/tele/src/types/: advanced.rs  advanced_business.rs  advanced_forum.rs  advanced_gifts.rs  advanced_misc.rs  advanced_payments.rs  advanced_stickers.rs  advanced_stories.rs  bot.rs  chat.rs  command.rs  common.rs  file.rs  message.rs  mod.rs  payment.rs  sticker.rs  telegram.rs  update.rs  upload.rs  webhook.rs
crates/tele/src/types/message/: common.rs  content.rs  forum.rs  media.rs  metadata.rs  model.rs  payments.rs  reply.rs  requests.rs  service.rs  tests.rs
crates/tele/tests/: async_client.rs  blocking_client.rs  bot_axum.rs  bot_commands_derive.rs  bot_runtime.rs  error_classification.rs  method_coverage.rs
crates/tele/tests/fixtures/: bot_api_all_methods.txt
examples/: api_layers.rs  blocking_send_message.rs  bot_axum_webhook.rs  bot_engine_long_polling.rs  bot_fallible_session.rs  bot_long_polling.rs  bot_quickstart.rs  bot_typed_commands.rs
scripts/: gen_advanced.py
scripts/spec/: telegram_bot_api_9_4_all_methods.txt  telegram_bot_api_9_4_methods.json
tests/: blocking_client.rs  bot_runtime.rs  error_classification.rs
