[workspace]
members = [
    "crates/tele",
    "crates/tele-macros",
]
default-members = ["crates/tele"]
resolver = "3"

[workspace.package]
version = "0.1.5"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/lvillis/tele-rs"
homepage = "https://github.com/lvillis/tele-rs"

[workspace.dependencies]
axum = { version = "0.8.8", default-features = false, features = ["http1", "tokio"] }
bytes = { version = "1.11.1", default-features = false, features = ["std"] }
futures-core = { version = "0.3.32", default-features = false }
hmac = { version = "0.12.1", default-features = false, features = ["std"] }
http = { version = "1.4.0", default-features = false, features = ["std"] }
proc-macro-crate = { version = "3.5.0", default-features = false }
proc-macro2 = { version = "1.0.106", default-features = false, features = ["proc-macro"] }
quote = { version = "1.0.45", default-features = false, features = ["proc-macro"] }
redis = { version = "1.0.4", default-features = false, features = ["tokio-comp"] }
reqx = { version = "0.1.23", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
sha2 = { version = "0.10.9", default-features = false, features = ["std"] }
syn = { version = "2.0.117", default-features = false, features = ["full", "derive", "parsing", "printing", "clone-impls", "proc-macro"] }
thiserror = { version = "2.0.18", default-features = false, features = ["std"] }
tokio = { version = "1.50.0", default-features = false }
tokio-postgres = { version = "0.7.16", default-features = false, features = ["runtime"] }
trybuild = { version = "1.0.116", default-features = false }
url = { version = "2.5.8", default-features = false, features = ["std"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

[workspace.metadata.release]
allow-branch = ["main"]
shared-version = true
consolidate-commits = true
dependent-version = "upgrade"
tag-name = "v{{version}}"
tag-message = "chore(release): v{{version}}"
pre-release-commit-message = "chore(release): v{{version}}"
push-remote = "origin"

[patch.crates-io]
tele-macros = { path = "crates/tele-macros" }
