[package]
name = "tele-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
description = "Proc-macros for tele bot ergonomics"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { version = "3.4.0" }
proc-macro2 = { version = "1.0.106" }
quote = { version = "1.0.44" }
syn = { version = "2.0.117", features = ["full"] }

[dev-dependencies]
tele = { path = "../tele", default-features = false, features = ["bot"] }
trybuild = { version = "1.0.116" }
