[package]
name = "tele-macros"
description = "Proc-macros for tele bot ergonomics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tele-macros"
readme = "README.md"
keywords = ["telegram", "bot", "macros", "proc-macro", "tele"]
categories = ["development-tools::procedural-macro-helpers"]
include = [
    "src/**",
    "tests/**",
    "README.md",
]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
tele = { path = "../tele", default-features = false, features = ["bot", "async-tls-rustls-ring"] }
trybuild = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
