[package]
name = "tele"
description = "Ergonomic Telegram Bot API SDK for Rust, built on reqx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tele"
readme = "README.md"
keywords = ["telegram", "bot", "api", "sdk", "reqx"]
categories = ["api-bindings", "network-programming", "asynchronous"]

[features]
default = ["async"]
async = [
    "reqx/async-tls-native",
    "reqx/strict-feature-guards",
    "dep:bytes",
    "dep:futures-core",
]
blocking = ["reqx/blocking-tls-native", "reqx/strict-feature-guards"]
bot = ["async", "dep:tokio"]
axum = ["bot", "dep:axum"]
macros = ["bot", "dep:tele-macros"]
otel = ["reqx/otel"]
redis-session = ["bot", "dep:redis"]
postgres-session = ["bot", "dep:tokio-postgres"]

[dependencies]
axum = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
http = { workspace = true }
reqx = { workspace = true }
redis = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tele-macros = { version = "=0.1.0", path = "../tele-macros", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync"], optional = true }
tokio-postgres = { workspace = true, optional = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "async_send_message"
path = "examples/async_send_message.rs"
required-features = ["async"]

[[example]]
name = "blocking_send_message"
path = "examples/blocking_send_message.rs"
required-features = ["blocking"]

[[example]]
name = "bot_long_polling"
path = "examples/bot_long_polling.rs"
required-features = ["bot"]

[[example]]
name = "bot_fallible_session"
path = "examples/bot_fallible_session.rs"
required-features = ["bot"]

[[example]]
name = "bot_typed_commands"
path = "examples/bot_typed_commands.rs"
required-features = ["macros"]

[[example]]
name = "bot_axum_webhook"
path = "examples/bot_axum_webhook.rs"
required-features = ["axum"]

[[example]]
name = "api_layers"
path = "examples/api_layers.rs"
required-features = ["async"]

[[example]]
name = "bot_engine_long_polling"
path = "examples/bot_engine_long_polling.rs"
required-features = ["bot"]

[[example]]
name = "bot_quickstart"
path = "examples/bot_quickstart.rs"
required-features = ["bot"]

[[test]]
name = "async_client"
path = "tests/async_client.rs"
required-features = ["async"]

[[test]]
name = "blocking_client"
path = "tests/blocking_client.rs"
required-features = ["blocking"]

[[test]]
name = "bot_axum"
path = "tests/bot_axum.rs"
required-features = ["axum"]

[[test]]
name = "bot_commands_derive"
path = "tests/bot_commands_derive.rs"
required-features = ["macros"]

[[test]]
name = "bot_runtime"
path = "tests/bot_runtime.rs"
required-features = ["bot"]

[[test]]
name = "error_classification"
path = "tests/error_classification.rs"

[[test]]
name = "method_coverage"
path = "tests/method_coverage.rs"
